--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script src="/script.js" defer></script>
+  <script src="/JS/country-script.js" defer></script>
+  <script src="/JS/script.js" defer></script>
   <!-- Fontawesome CDN Link for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"/>
   <title>Document</title>
@@ -24,11 +25,11 @@
           <div class="select-box">
             <img src="https://flagcdn.com/48x36/in.png" alt="flag">
             <select>
-              <option value="USD">USD</option>
+              <!-- <option value="USD">USD</option>
               <option value="USD">INR</option>
               <option value="USD">NPR</option>
               <option value="USD">PKR</option>
-              <option value="USD">MAD</option>
+              <option value="USD">MAD</option> -->
             </select>
           </div>
         </div>
@@ -38,16 +39,16 @@
           <div class="select-box">
             <img src="https://flagcdn.com/48x36/jp.png" alt="flag">
             <select>
-              <option value="USD">USD</option>
+              <!-- <option value="USD">USD</option>
               <option value="USD">INR</option>
               <option value="USD">NPR</option>
               <option value="USD">PKR</option>
-              <option value="USD">MAD</option>
+              <option value="USD">MAD</option> -->
             </select>
           </div>
         </div>
       </div>
-      <div class="exchange-rate">1 USD = 118.16 NPR</div>
+      <div class="exchange-rate">Getting Exchange Rate...</div>
       <button>Get Exchange</button>
     </form>
   </div>
